--- a/_report/history.Rmd
+++ b/_report/history.Rmd
@@ -715,6 +715,49 @@ plot(d, "duckdb-latest", 1e8, "join")
 plot(d, "duckdb-latest", 1e9, "join")
 ```
 
+
+### duckdb-0.8.1 {.tabset .tabset-fade .tabset-pills}
+
+#### groupby {.tabset .tabset-fade .tabset-pills}
+
+##### 0.5 GB
+
+```{r duckdb-0.8.1.groupby.1e7}
+plot(d, "duckdb-0.8.1", 1e7, "groupby")
+```
+
+##### 5 GB
+
+```{r duckdb-0.8.1.groupby.1e8}
+plot(d, "duckdb-0.8.1", 1e8, "groupby")
+```
+
+##### 50 GB {.active}
+
+```{r duckdb-0.8.1.groupby.1e9}
+plot(d, "duckdb-0.8.1", 1e9, "groupby")
+```
+
+#### join {.tabset .tabset-fade .tabset-pills}
+
+##### 0.5 GB
+
+```{r duckdb-0.8.1.join.1e7}
+plot(d, "duckdb-0.8.1", 1e7, "join")
+```
+
+##### 5 GB {.active}
+
+```{r duckdb-0.8.1.join.1e8}
+plot(d, "duckdb-0.8.1", 1e8, "join")
+```
+
+##### 50 GB
+
+```{r duckdb-0.8.1.join.1e9}
+plot(d, "duckdb-0.8.1", 1e9, "join")
+```
+
 ## Details
 
 ### Environment
