--- a/_report/index.Rmd
+++ b/_report/index.Rmd
@@ -101,7 +101,7 @@ loop_benchplot(dt_join, report_name="join", syntax.dict=join.syntax.dict, except
 
 ## Machine Type {.tabset .tabset-fade .tabset-pills}
 
-### Small 
+### Small (32 cores / 64GB memory)
 
 #### Task {.tabset .tabset-fade .tabset-pills}
 
@@ -111,31 +111,31 @@ loop_benchplot(dt_join, report_name="join", syntax.dict=join.syntax.dict, except
 
 ####### **basic questions**
 
-![](./groupby/G1_1e7_1e2_0_0_basic.png)
+![](./groupby/G1_1e7_1e2_0_0_basic_small.png)
 
 ####### **advanced questions**
 
-![](./groupby/G1_1e7_1e2_0_0_advanced.png)
+![](./groupby/G1_1e7_1e2_0_0_advanced_small.png)
 
 ###### 5 GB
 
 ####### **basic questions**
 
-![](./groupby/G1_1e8_1e2_0_0_basic.png)
+![](./groupby/G1_1e8_1e2_0_0_basic_small.png)
 
 ####### **advanced questions**
 
-![](./groupby/G1_1e8_1e2_0_0_advanced.png)
+![](./groupby/G1_1e8_1e2_0_0_advanced_small.png)
 
 ###### 50 GB {.active}
 
 ####### **basic questions**
 
-![](./groupby/G1_1e9_1e2_0_0_basic.png)
+![](./groupby/G1_1e9_1e2_0_0_basic_small.png)
 
 ####### **advanced questions**
 
-![](./groupby/G1_1e9_1e2_0_0_advanced.png)
+![](./groupby/G1_1e9_1e2_0_0_advanced_small.png)
 
 ##### join {.tabset .tabset-fade .tabset-pills}
 
@@ -143,21 +143,21 @@ loop_benchplot(dt_join, report_name="join", syntax.dict=join.syntax.dict, except
 
 ####### **basic questions**
 
-![](./join/J1_1e7_NA_0_0_basic.png)
+![](./join/J1_1e7_NA_0_0_basic_small.png)
 
 ###### 5 GB {.active}
 
 ####### **basic questions**
 
-![](./join/J1_1e8_NA_0_0_basic.png)
+![](./join/J1_1e8_NA_0_0_basic_small.png)
 
 ###### 50 GB
 
 ####### **basic questions**
 
-![](./join/J1_1e9_NA_0_0_basic.png)
+![](./join/J1_1e9_NA_0_0_basic_small.png)
 
-### Large 
+### X-Large (128 cores / 256GB memory)
 
 #### Task {.tabset .tabset-fade .tabset-pills}
 
@@ -167,31 +167,31 @@ loop_benchplot(dt_join, report_name="join", syntax.dict=join.syntax.dict, except
 
 ####### **basic questions**
 
-![](./groupby/G1_1e7_1e2_0_0_basic.png)
+![](./groupby/G1_1e7_1e2_0_0_basic_xlarge.png)
 
 ####### **advanced questions**
 
-![](./groupby/G1_1e7_1e2_0_0_advanced.png)
+![](./groupby/G1_1e7_1e2_0_0_advanced_xlarge.png)
 
 ###### 5 GB
 
 ####### **basic questions**
 
-![](./groupby/G1_1e8_1e2_0_0_basic.png)
+![](./groupby/G1_1e8_1e2_0_0_basic_xlarge.png)
 
 ####### **advanced questions**
 
-![](./groupby/G1_1e8_1e2_0_0_advanced.png)
+![](./groupby/G1_1e8_1e2_0_0_advanced_xlarge.png)
 
 ###### 50 GB {.active}
 
 ####### **basic questions**
 
-![](./groupby/G1_1e9_1e2_0_0_basic.png)
+![](./groupby/G1_1e9_1e2_0_0_basic_xlarge.png)
 
 ####### **advanced questions**
 
-![](./groupby/G1_1e9_1e2_0_0_advanced.png)
+![](./groupby/G1_1e9_1e2_0_0_advanced_xlarge.png)
 
 ##### join {.tabset .tabset-fade .tabset-pills}
 
@@ -199,19 +199,19 @@ loop_benchplot(dt_join, report_name="join", syntax.dict=join.syntax.dict, except
 
 ####### **basic questions**
 
-![](./join/J1_1e7_NA_0_0_basic.png)
+![](./join/J1_1e7_NA_0_0_basic_xlarge.png)
 
 ###### 5 GB {.active}
 
 ####### **basic questions**
 
-![](./join/J1_1e8_NA_0_0_basic.png)
+![](./join/J1_1e8_NA_0_0_basic_xlarge.png)
 
 ###### 50 GB
 
 ####### **basic questions**
 
-![](./join/J1_1e9_NA_0_0_basic.png)
+![](./join/J1_1e9_NA_0_0_basic_xlarge.png)
 
 ---
 
