--- a/_report/index.Rmd
+++ b/_report/index.Rmd
@@ -97,135 +97,69 @@ loop_benchplot(dt_join, report_name="join", syntax.dict=join.syntax.dict, except
 ```
 
 
-## Machine Type {.tabset .tabset-fade .tabset-pills}
+## Task {.tabset .tabset-fade .tabset-pills}
 
-### Small (32 cores / 64GB memory)
+### groupby {.tabset .tabset-fade .tabset-pills}
 
-#### Task {.tabset .tabset-fade .tabset-pills}
+#### 0.5 GB
 
-##### groupby {.tabset .tabset-fade .tabset-pills}
+##### **basic questions**
 
-###### 0.5 GB
+![](./groupby/G1_1e7_1e2_0_0_basic.png)
 
-####### **basic questions**
+##### **advanced questions**
 
-![](./groupby/G1_1e7_1e2_0_0_basic_small.png)
+![](./groupby/G1_1e7_1e2_0_0_advanced.png)
 
-####### **advanced questions**
+#### 5 GB
 
-![](./groupby/G1_1e7_1e2_0_0_advanced_small.png)
+##### **basic questions**
 
-###### 5 GB
+![](./groupby/G1_1e8_1e2_0_0_basic.png)
 
-####### **basic questions**
+##### **advanced questions**
 
-![](./groupby/G1_1e8_1e2_0_0_basic_small.png)
+![](./groupby/G1_1e8_1e2_0_0_advanced.png)
 
-####### **advanced questions**
+#### 50 GB {.active}
 
-![](./groupby/G1_1e8_1e2_0_0_advanced_small.png)
+##### **basic questions**
 
-###### 50 GB {.active}
+![](./groupby/G1_1e9_1e2_0_0_basic.png)
 
-####### **basic questions**
+##### **advanced questions**
 
-![](./groupby/G1_1e9_1e2_0_0_basic_small.png)
-
-####### **advanced questions**
-
-![](./groupby/G1_1e9_1e2_0_0_advanced_small.png)
-
-###### 500 GB
-
-####### **basic questions**
-
-![](./groupby/G1_1e10_1e4_10_0_basic_small.png)
-
-####### **advanced questions**
-
-![](./groupby/G1_1e10_1e4_0_0_advanced_small.png)
-
-##### join {.tabset .tabset-fade .tabset-pills}
-
-###### 0.5 GB
-
-####### **basic questions**
-
-![](./join/J1_1e7_NA_0_0_basic_small.png)
-
-###### 5 GB {.active}
-
-####### **basic questions**
-
-![](./join/J1_1e8_NA_0_0_basic_small.png)
-
-###### 50 GB
-
-####### **basic questions**
-
-![](./join/J1_1e9_NA_0_0_basic_small.png)
-
-### X-Large (128 cores / 256GB memory)
-
-#### Task {.tabset .tabset-fade .tabset-pills}
-
-##### groupby {.tabset .tabset-fade .tabset-pills}
-
-###### 0.5 GB
-
-####### **basic questions**
-
-![](./groupby/G1_1e7_1e2_0_0_basic_xlarge.png)
-
-####### **advanced questions**
-
-![](./groupby/G1_1e7_1e2_0_0_advanced_xlarge.png)
-
-###### 5 GB
-
-####### **basic questions**
-
-![](./groupby/G1_1e8_1e2_0_0_basic_xlarge.png)
-
-####### **advanced questions**
-
-![](./groupby/G1_1e8_1e2_0_0_advanced_xlarge.png)
-
-###### 50 GB {.active}
-
-####### **basic questions**
-
-![](./groupby/G1_1e9_1e2_0_0_basic_xlarge.png)
-
-####### **advanced questions**
-
-![](./groupby/G1_1e9_1e2_0_0_advanced_xlarge.png)
-
-##### join {.tabset .tabset-fade .tabset-pills}
-
-###### 0.5 GB
-
-####### **basic questions**
-
-![](./join/J1_1e7_NA_0_0_basic_xlarge.png)
-
-###### 5 GB {.active}
-
-####### **basic questions**
-
-![](./join/J1_1e8_NA_0_0_basic_xlarge.png)
-
-###### 50 GB
-
-####### **basic questions**
-
-![](./join/J1_1e9_NA_0_0_basic_xlarge.png)
+![](./groupby/G1_1e9_1e2_0_0_advanced.png)
 
 #### 500 GB
 
 ##### **basic questions**
 
-![](./join/J1_1e10_NA_10_0_basic.png)
+![](./groupby/G1_1e10_1e4_10_0_basic.png)
+
+##### **advanced questions**
+
+![](./groupby/G1_1e10_1e4_0_0_advanced.png)
+
+### join {.tabset .tabset-fade .tabset-pills}
+
+#### 0.5 GB
+
+##### **basic questions**
+
+![](./join/J1_1e7_NA_0_0_basic.png)
+
+#### 5 GB {.active}
+
+##### **basic questions**
+
+![](./join/J1_1e8_NA_0_0_basic.png)
+
+#### 50 GB
+
+##### **basic questions**
+
+![](./join/J1_1e9_NA_0_0_basic.png)
 
 <!--
 ##### **advanced questions**
